# info-gtk

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pytest.yml  python-publish.yml
docs/: index.html
info_gtk/: __init__.py  auth.py  base.py  info_gtk.py  infogtk.py  kelulusan_sertifikasi.py  profile.py  realisasi_sktp.py  rombongan_belajar.py  sktp.py  status_nuptk.py  table_data.py  verivikasi_data_tunjangan.py
info_gtk/data_individu/: __init__.py  data_individu.py  ijazah_terakhir.py  jam_mengajar.py  sekolah_induk.py  status_kepegawaian.py  tugas_tambahan.py
info_gtk/models/: __init__.py  kelulusan_sertifikasi.py  pembayaran_sktp.py  profile.py  rombongan_belajar.py  sktp.py  status_nuptk.py  tunjangan_profesi_guru.py  verivikasi_data_tunjangan.py
info_gtk/models/data_individu/: __init__.py  status_kepegawaian.py
tests/: conftest.py  test_info_gtk.py
