[tool.poetry]
name = "info-gtk"
version = "0.1.0"
description = ""
authors = ["hexatester <revolusi147id@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"
bs4 = "^0.0.1"
click = "^7.1.2"
openpyxl = "^3.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.6.0"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
